--- a/css/main.css
+++ b/css/main.css
@@ -1643,6 +1643,16 @@ div#choices--country-we-item-choice-1 {
   .experts__inner {
     margin-bottom: 150px;
   }
+
+  .events__content-item {
+    max-width: 392px;
+  }
+  .events__content-item img {
+    width: 100%;
+    height: 156px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 @media (max-width: 1200px) {
   .main__title {
@@ -1852,9 +1862,9 @@ div#choices--country-we-item-choice-1 {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     gap: 20px 20px;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
   .price__content {
@@ -1935,6 +1945,77 @@ div#choices--country-we-item-choice-1 {
     max-width: 728px;
     margin: 0 auto 100px;
     padding-top: 37px;
+  }
+
+  .events__content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .events__content-item {
+    max-width: 300px;
+  }
+  .events__content-item img {
+    width: 100%;
+    height: 118px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .contact {
+    height: 843px;
+  }
+
+  .contact__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 63px 0 91px;
+  }
+
+  .contact__left {
+    text-align: center;
+    margin: 0 auto;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+
+  .contact__title {
+    margin-bottom: 25px;
+  }
+  .contact__title h3 {
+    font-size: 32px;
+    margin-bottom: 25px;
+  }
+  .contact__title p {
+    font-size: 16px;
+  }
+
+  .contact__social p {
+    font-size: 18px;
+  }
+
+  .contact__icons-box {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+
+  .contact__icons {
+    margin: 0;
+  }
+
+  .contact__form {
+    max-width: 598px;
+    margin: 0 auto;
+  }
+
+  .contact__btn {
+    font-size: 18px;
+    padding: 22px 45px;
   }
 }
 @media (max-width: 1000px) {
@@ -2156,6 +2237,34 @@ div#choices--country-we-item-choice-1 {
     height: 82px;
     line-height: 82px;
   }
+  .partners__content-item:nth-child(6) img {
+    -webkit-transform: scale(0.8) translate(0px, -10px);
+            transform: scale(0.8) translate(0px, -10px);
+  }
+
+  .events__content-item {
+    max-width: 229px;
+  }
+  .events__content-item img {
+    width: 100%;
+    height: 100px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .events__content-text {
+    font-size: 12px;
+    padding: 0 6px 0 10px;
+    margin-top: 20px;
+    margin-bottom: 35px;
+  }
+  .events__content-text span {
+    font-size: 14px;
+  }
+
+  .events__content-num {
+    padding: 0 0 10px 10px;
+  }
 }
 @media (max-width: 900px) {
   .prog__acc-box p {
@@ -2200,6 +2309,44 @@ div#choices--country-we-item-choice-1 {
 
   .experts__slider-text {
     margin: 0 auto;
+  }
+
+  .becom-partner__title {
+    font-size: 32px;
+    margin-bottom: 30px;
+  }
+
+  .becom-partner__text {
+    font-size: 20px;
+    margin-bottom: 35px;
+  }
+
+  .becom-partner__btn {
+    padding: 0 75px;
+  }
+
+  .footer__icon {
+    font-size: 12px;
+  }
+  .footer__icon a img {
+    -webkit-transform: scale(0.9) translateX(-7px);
+            transform: scale(0.9) translateX(-7px);
+  }
+
+  .nav__menu {
+    font-size: 14px;
+  }
+
+  .nav__menu-item {
+    margin-right: 26px;
+  }
+
+  .footer__adress {
+    max-width: 167px;
+    font-size: 12px;
+  }
+  .footer__adress a {
+    font-size: 14px;
   }
 }
 @media (max-width: 768px) {
@@ -2400,6 +2547,61 @@ div#choices--country-we-item-choice-1 {
     line-height: 55px;
     margin: 0 32px;
     border-radius: 5px;
+  }
+
+  .events {
+    position: relative;
+    height: 763px;
+  }
+
+  .events__content {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    position: absolute;
+    margin: 0;
+    top: 190px;
+    left: 50%;
+  }
+
+  .events__content-item {
+    -webkit-transform: translateY(-86%);
+            transform: translateY(-86%);
+    width: 171px;
+    height: 323px;
+  }
+  .events__content-item img {
+    height: 86px;
+  }
+
+  .events__content-text {
+    position: relative;
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    font-size: 10px;
+    line-height: 18px;
+    padding: 0;
+    margin: 0;
+    width: 175px;
+    top: 65px;
+    left: 30px;
+  }
+  .events__content-text span {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 5px;
+  }
+
+  .events__content-num {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    padding: 0;
+    position: relative;
+    top: 12px;
+    left: -65px;
   }
 }
 @media (max-width: 730px) {
@@ -2917,7 +3119,7 @@ div#choices--country-we-item-choice-1 {
 
   .partners__content {
     max-width: 322px;
-    gap: 11px 11px;
+    gap: 10px 10px;
   }
 
   .partners__content-item {
@@ -2941,5 +3143,140 @@ div#choices--country-we-item-choice-1 {
   .partners__content-item:nth-child(7) img {
     -webkit-transform: scale(0.5) translate(-67px, 0px);
             transform: scale(0.5) translate(-67px, 0px);
+  }
+
+  .becom-partner__title {
+    font-size: 24px;
+    line-height: 35px;
+  }
+
+  .becom-partner__text {
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .becom-partner__btn {
+    font-size: 16px;
+    line-height: 55px;
+    width: 100%;
+  }
+
+  .contact {
+    height: 758px;
+  }
+
+  .contact__inner {
+    padding: 90px 0;
+  }
+
+  .contact__title {
+    margin-bottom: 18px;
+  }
+  .contact__title h3 {
+    font-size: 24px;
+    margin-bottom: 18px;
+  }
+  .contact__title p {
+    font-size: 14px;
+    line-height: 28px;
+  }
+
+  .contact__social p {
+    font-size: 16px;
+    margin: 0;
+  }
+
+  .contact__icons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin: 0;
+  }
+
+  .contact__icons-box {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+
+  .contact__icons-img {
+    width: 45px;
+    height: 45px;
+  }
+  .contact__icons-img img {
+    -webkit-transform: scale(0.8) translateY(-6px);
+            transform: scale(0.8) translateY(-6px);
+  }
+
+  .contact__left {
+    height: auto;
+  }
+
+  .contact__form {
+    min-width: auto;
+    width: 320px;
+    padding: 0 16px 24px;
+  }
+
+  .contact__btn {
+    max-width: 100%;
+    display: inline;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .contact__input {
+    font-size: 14px;
+  }
+  .contact__input input {
+    font-size: 14px;
+  }
+
+  .choices[data-type*=select-one]::after {
+    top: 18px;
+    left: 0;
+  }
+
+  .choices[data-type*=select-one].is-open::after {
+    top: 18px;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+
+  .choices__item.choices__item--selectable {
+    position: relative;
+  }
+  .choices__item.choices__item--selectable img {
+    position: absolute;
+    top: 19px;
+    left: 41px;
+  }
+
+  .choices__inner {
+    font-size: 14px;
+    width: 87px;
+  }
+
+  .choices {
+    width: 92px;
+  }
+
+  .footer__icon {
+    font-size: 10px;
+  }
+  .footer__icon p {
+    margin-top: 10px;
+  }
+
+  .footer__adress {
+    font-size: 10px;
+  }
+  .footer__adress a {
+    font-size: 10px;
+  }
+  .footer__adress p {
+    margin-bottom: 10px;
   }
 }
